force-app/main/default/objects/Finance_Transaction__c/Finance_Transaction__c.object-meta.xml
<CustomObject>
    <label>BT Finance Transaction</label>
    <nameField>
        <displayFormat>TRAN-{00000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT Finance Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>