force-app/main/default/objects/Finance_Transaction__c/fields/Accounting_Period__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounting Period</label>
    <referenceTo>Accounting_Period__c</referenceTo>
    <relationshipName>Finance_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>