force-app/main/default/objects/Finance_Transaction__c/fields/BT_Payment_Request__c.field-meta.xml
<CustomField>
    <fullName>BT_Payment_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BT Payment Request</label>
    <referenceTo>Payment_Request__c</referenceTo>
    <relationshipLabel>BT Finance Transactions</relationshipLabel>
    <relationshipName>BT_Finance_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>