force-app/main/default/objects/Finance_Transaction__c/fields/Budget_Line__c.field-meta.xml
<CustomField>
    <fullName>Budget_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Line</label>
    <referenceTo>Budget_Item__c</referenceTo>
    <relationshipName>Finance_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>