force-app/main/default/objects/Finance_Transaction__c/fields/Cash_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Cash_Disbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cash Disbursement (PO)</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipName>Finance_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>