force-app/main/default/objects/Finance_Transaction__c/fields/Change_Order__c.field-meta.xml
<CustomField>
    <fullName>Change_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the Change Order that originated the Sales Invoice (AR).</inlineHelpText>
    <label>Change Order</label>
    <referenceTo>Change_Order__c</referenceTo>
    <relationshipName>Finance_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>