force-app/main/default/objects/Finance_Transaction__c/fields/Contractor_Invoice_PO__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Invoice_PO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor Invoice (PO)</label>
    <referenceTo>Account_Payable__c</referenceTo>
    <relationshipName>Finance_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>