force-app/main/default/objects/Finance_Transaction__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense</label>
    <referenceTo>Expense__c</referenceTo>
    <relationshipName>Finance_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>