force-app/main/default/objects/Finance_Transaction__c/fields/Finance_Type__c.field-meta.xml
<CustomField>
    <fullName>Finance_Type__c</fullName>
    <label>Finance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash Disbursement</fullName>
            </value>
            <value>
                <fullName>Contractor Invoice</fullName>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Payable Invoice</fullName>
            </value>
            <value>
                <fullName>Receipt</fullName>
            </value>
            <value>
                <fullName>Sales Invoice</fullName>
            </value>
            <value>
                <fullName>Payment Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>