force-app/main/default/objects/Finance_Transaction__c/fields/Payable_Invoice_AP__c.field-meta.xml
<CustomField>
    <fullName>Payable_Invoice_AP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payable Invoice (AP)</label>
    <referenceTo>Account_Payable_Clone__c</referenceTo>
    <relationshipName>Finance_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>