force-app/main/default/objects/Finance_Transaction__c/fields/Payment_AP__c.field-meta.xml
<CustomField>
    <fullName>Payment_AP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment (AP)</label>
    <referenceTo>BT_Payment__c</referenceTo>
    <relationshipName>Finance_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>