force-app/main/default/objects/Finance_Transaction__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt (AR)</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipName>Finance_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>