force-app/main/default/objects/Finance_Transaction__c/fields/Sales_Invoice_AR__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_AR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Invoice (AR)</label>
    <referenceTo>Billings__c</referenceTo>
    <relationshipName>Finance_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>