force-app/main/default/objects/Finance_Transaction__c/fields/Schedule_of_Values__c.field-meta.xml
<CustomField>
    <fullName>Schedule_of_Values__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the Schedule of Values record that originated the Sales Invoice (AR)</inlineHelpText>
    <label>Schedule of Values</label>
    <referenceTo>Schedule_of_Values__c</referenceTo>
    <relationshipName>Finance_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>