force-app/main/default/objects/Finance_Transaction__c/fields/Time_Card__c.field-meta.xml
<CustomField>
    <fullName>Time_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the Time Card that originated the Payable Invoice (AP)</inlineHelpText>
    <label>Time Card</label>
    <referenceTo>Time_Cards__c</referenceTo>
    <relationshipName>Finance_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>