force-app/main/default/objects/Finance_Transaction__c/fields/Vendor_Account__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Finance_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>