force-app/main/default/objects/Finance_Transaction__c/fields/Vendor_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Document_Number__c</fullName>
    <label>Vendor Document Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>