force-app/main/default/objects/Finance_Transaction__c/recordTypes/Sales_Invoice_AR.recordType-meta.xml
<RecordType>
    <fullName>Sales_Invoice_AR</fullName>
    <active>true</active>
    <label>Sales Invoice (AR)</label>
</RecordType>