force-app/main/default/objects/Finance_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Type__c</columns>
    <columns>Finance_Type__c</columns>
    <columns>Amount__c</columns>
    <columns>Credit_Amount__c</columns>
    <columns>Debit_Amount__c</columns>
    <columns>Expense__c</columns>
    <columns>Purchase_Order__c</columns>
    <columns>Contractor_Invoice_PO__c</columns>
    <columns>Sales_Invoice_AR__c</columns>
    <columns>Payable_Invoice_AP__c</columns>
    <columns>Cash_Disbursement__c</columns>
    <columns>Payment_AP__c</columns>
    <columns>Receipt__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>